--- a/part4.css
+++ b/part4.css
@@ -427,4 +427,20 @@
 	50%{opacity: 0;}
 	100%{opacity: 0;}
 }
+@media (min-width: 376px) and (max-width: 600px){
+	
+	.view4{
+		display: none;
+	}
+	
+	
+}
 
+@media (min-width: 100px) and (max-width: 375px){
+	
+	.view4{
+		display: none;
+	}
+		
+	
+}
