--- a/part2.css
+++ b/part2.css
@@ -679,13 +679,13 @@
 		display: block;
 	}
 	
-	.view2-2Mobile{
+	.view22Mobile{
 		display: block;
 	}
 	.bg2-2Moblie{
 		display: block;
 	}
-	.view2-3Mobile{
+	.view23Mobile{
 		display: block;
 	}
 	.view3{
@@ -705,13 +705,13 @@
 	.view21Mobile{
 		display: block;
 	}
-	.view2-2Mobile{
+	.view22Mobile{
 		display: block;
 	}
-	.bg2-2Moblie{
+	.bg22Moblie{
 		display: block;
 	}
-	.view2-3Mobile{
+	.view23Mobile{
 		display: block;
 	}
 	.view3{
