--- a/part2.css
+++ b/part2.css
@@ -686,7 +686,7 @@
 	100%{margin-left: 90%; margin-top: 50.16%;transform:  scaleX(-1);}
 }
 
-@media (min-width: 376px) and (max-width: 600px){
+@media screen and (min-width: 376px) and (max-width: 600px){
 	
 	.view2{
 		display: none;
@@ -713,7 +713,7 @@
 	
 }
 
-@media (min-width: 100px) and (max-width: 375px){
+@media screen and (min-width: 100px) and (max-width: 375px){
 	
 	.view2{
 		display: none;
