--- a/HomePage.css
+++ b/HomePage.css
@@ -544,7 +544,7 @@ h3,p{
 	filter:drop-shadow(0px 0px 10px rgba(0,0,0,.5));    
 }
 
-@media (min-width: 1280px) and (max-width: 1500px){
+@media (min-device-width: 1280px) and (max-device-width: 1500px){
 	
 	html{
 		font-size: 8px;
@@ -552,14 +552,14 @@ h3,p{
 	
 }
 
-@media (min-width: 960px) and (max-width: 1280px){
+@media (min-device-width: 960px) and (max-device-width: 1280px){
 	
 	html{
 		font-size: 6px;
 	}
 	
 }
-@media (min-width: 600px) and (max-width: 960px){
+@media (min-device-width: 600px) and (max-device-width: 960px){
 	
 	
 	html{
@@ -569,7 +569,7 @@ h3,p{
 	
 }
 
-@media (min-width: 376px) and (max-width: 600px){
+@media (min-device-width: 376px) and (max-device-width: 600px){
 	
 	
 	html{
@@ -578,7 +578,7 @@ h3,p{
 	
 }
 
-@media (min-width: 100px) and (max-width: 375px){
+@media (min-device-width: 100px) and (max-device-width: 375px){
 	
 	html{
 		font-size: 1px;
