--- a/HomePage.css
+++ b/HomePage.css
@@ -14,7 +14,7 @@ html{
 	font-family: Gen Jyuu Gothic ;
 	overflow-x: hidden;
 	scroll-behavior: smooth;
-	font-size: 18px;
+	font-size: 12px;
 	
 
 
@@ -544,7 +544,7 @@ h3,p{
 	filter:drop-shadow(0px 0px 10px rgba(0,0,0,.5));    
 }
 
-@media (min-device-width: 1280px) and (max-device-width: 1500px){
+@media (min-width: 1280px) and (max-width: 1500px){
 	
 	html{
 		font-size: 8px;
@@ -552,7 +552,7 @@ h3,p{
 	
 }
 
-@media (min-device-width: 960px) and (max-device-width: 1280px){
+@media (min-width: 960px) and (max-width: 1280px){
 	
 	html{
 		font-size: 6px;
