--- a/part4.css
+++ b/part4.css
@@ -90,6 +90,7 @@
 	width: 25%;
 	height: 46.3%;
 	color: #acd3d2;
+	text-align: center;
 	
 }
 
@@ -179,6 +180,7 @@
 	width: 25%;
 	height: 46.3%;
 	color: #acd3d2;
+	text-align: center;
 }
 .textcardsun {
   	position: absolute;
@@ -257,6 +259,7 @@
 	width: 25%;
 	height: 46.3%;
 	color: #acd3d2;
+	text-align: center;
 }
 .textcardoil {
   	position: absolute;
@@ -337,6 +340,7 @@
 	width: 25%;
 	height: 46.3%;
 	color: #acd3d2;
+	text-align: center;
 }
 .textcardlife {
   	position: absolute;
