--- a/HomePage.css
+++ b/HomePage.css
@@ -544,7 +544,7 @@ h3,p{
 	filter:drop-shadow(0px 0px 10px rgba(0,0,0,.5));    
 }
 
-@media (min-width: 1280px) and (max-width: 1500px){
+@media (min-device-width: 1280px) and (min-device-width: 1500px){
 	
 	html{
 		font-size: 8px;
@@ -552,7 +552,7 @@ h3,p{
 	
 }
 
-@media (min-width: 960px) and (max-width: 1280px){
+@media (min-device-width: 960px) and (min-device-width: 1280px){
 	
 	html{
 		font-size: 6px;
@@ -573,7 +573,7 @@ h3,p{
 	
 	
 	html{
-		font-size: 2px;
+		font-size: 4px;
 	}
 	
 }
@@ -581,7 +581,7 @@ h3,p{
 @media (min-device-width: 100px) and (max-device-width: 375px){
 	
 	html{
-		font-size: 1px;
+		font-size: 2px;
 	}
 	.bar{
 		font-size: 6rem;
