--- a/HomePage.css
+++ b/HomePage.css
@@ -557,7 +557,9 @@ h3,p{
 	html{
 		font-size: 6px;
 	}
-	
+	.view4{
+		display: none;
+	}
 }
 @media (min-device-width: 600px) and (max-device-width: 960px){
 	
@@ -565,7 +567,9 @@ h3,p{
 	html{
 		font-size: 5px;
 	}
-	
+	.view4{
+		display: none;
+	}
 	
 }
 
