--- a/part3.css
+++ b/part3.css
@@ -95,12 +95,12 @@
 	outline: none;
 	font-family: Gen Jyuu Gothic;
 	font-weight: bold;
-	font-size: 32rem;
+	font-size: 36rem;
 	margin-left: 40%;
 	margin-top: 15%;
 	color: #ffffff;
-	width: 450px;
-	height: 300px;
+	width: 100%;
+	height: 50%;
 }
 .burninfor{
 	position: absolute;
