--- a/part3.css
+++ b/part3.css
@@ -61,6 +61,8 @@
 	z-index: 3;
 	margin-left: 7.4%;
 	magin-top: 1.85%;
+	width: 20%;
+	height: 20%;
 	color: #e98c24;
 	font-size: 12.5rem;
 	font-weight: bold;
