--- a/part3.css
+++ b/part3.css
@@ -69,7 +69,7 @@
 	position: absolute;
 	z-index: 3;
 	margin-left: 7.4%;
-	magin-top: 150%;
+	margin-top: 15%;
 	width: 25%;
 	height: 20%;
 	color: #e98c24;
