--- a/part3.css
+++ b/part3.css
@@ -85,7 +85,7 @@
 	background-color: transparent;
 	opacity: 1;
 	display:none;
-	border: 2px blue solid;
+	border: 2px orange solid;
 }
 .bg3-3Moblie{
 	position: absolute;
@@ -97,7 +97,7 @@
 	background-color: transparent;
 	opacity: 1;
 	display:none;
-	border: 2px blue solid;
+	border: 2px green solid;
 }
 /*.rectangle{
 	position: absolute;
