--- a/part3.css
+++ b/part3.css
@@ -94,7 +94,7 @@
 	left: 0%;
 	width: 100vw;
 	padding-bottom: 56%;
-	background-color: transparent;
+	background-color: #00FF00;
 	opacity: 1;
 	display:none;
 	border: 2px green solid;
