--- a/HomePage.css
+++ b/HomePage.css
@@ -22,12 +22,11 @@ body{
 	font-family: Gen Jyuu Gothic ;
 	margin: 0;
     padding: 0;
-    border: 0;
+    border: solid 3px #000000;
     display: block;
     width: 100%;
     height: 1100%;
 	overflow-x: hidden;
-
 	
 
 }
