--- a/HomePage.css
+++ b/HomePage.css
@@ -22,7 +22,7 @@ body{
 	font-family: Gen Jyuu Gothic ;
 	margin: 0;
     padding: 0;
-    border: solid 3px #000000;
+    border: solid 3px yellow;
     display: block;
     width: 100%;
     height: 1100%;
