--- a/part3.css
+++ b/part3.css
@@ -268,17 +268,15 @@
 	position: absolute;
 	z-index: 3;
 	background-color: transparent;
-	color: #ffffff;
-	font-size: 6rem;
 	outline: none;
-	width: 25%;
-	height: 10%;
-	margin-left: 35%;
-	margin-top: 30%;
-	opacity: 1;
-	font-weight: normal;
-	text-align: center;
-	-webkit-text-size-adjust:none;
+	font-family: Gen Jyuu Gothic;
+	font-weight: bold;
+	font-size: 32rem;
+	margin-left: 37.5%;
+	margin-top: 17.5%;
+	color: #ffffff;
+	width: 100%;
+	height: 50%;
 }
 .fermentationinfor{
 	position: absolute;
@@ -303,11 +301,11 @@
 	z-index: 3;
 	background-color: transparent;
 	color: #ffffff;
-	font-size: 2.67rem;
+	font-size: 6rem;
 	outline: none;
 	width: 25%;
 	height: 10%;
-	margin-left: 68%;
+	margin-left: 35%;
 	margin-top: 30%;
 	opacity: 1;
 	font-weight: normal;
