--- a/part3.css
+++ b/part3.css
@@ -206,6 +206,7 @@
 	font-family: Gen Jyuu Gothic;
 	font-weight: bold;
 	font-size: 36rem;
+	margin-left: 37.5%;
 	margin-top: 15%;
 	color: #ffffff;
 	width: 100%;
