--- a/part3.css
+++ b/part3.css
@@ -142,11 +142,11 @@
 	font-family: Gen Jyuu Gothic;
 	font-weight: bold;
 	font-size: 36rem;
-	margin-left: 37.5%;
 	margin-top: 15%;
 	color: #ffffff;
 	width: 100%;
 	height: 50%;
+	text-align: center;
 }
 .burninfor{
 	position: absolute;
@@ -206,11 +206,11 @@
 	font-family: Gen Jyuu Gothic;
 	font-weight: bold;
 	font-size: 36rem;
-	margin-left: 37.5%;
 	margin-top: 15%;
 	color: #ffffff;
 	width: 100%;
 	height: 50%;
+	text-align: center;
 }
 .breathinfor{
 	position: absolute;
@@ -267,11 +267,11 @@
 	font-family: Gen Jyuu Gothic;
 	font-weight: bold;
 	font-size: 36rem;
-	margin-left: 37.5%;
 	margin-top: 15%;
 	color: #ffffff;
 	width: 100%;
 	height: 50%;
+	text-align: center;
 }
 .fermentationinfor{
 	position: absolute;
