--- a/part4.css
+++ b/part4.css
@@ -14,6 +14,19 @@
 
 	
 }
+.view4-1Mobile{
+	position: absolute;
+	z-index: 5;
+	margin-top: 392%;
+	left: 0%;
+	width: 100vw;
+	padding-bottom: 56%;
+	background-color: transparent;
+	overflow: hidden;
+	opacity: 1;
+	display: none;
+	
+}
 .bg4{
 	position: absolute;
 	z-index: -1;
@@ -24,6 +37,16 @@
 	padding-bottom: 56%;
 	display: block;
 
+}
+.bg4-1Moblie{
+	position: absolute;
+	z-index: 1;
+	margin-top: 392%;
+	left: 0%;
+	width: 100%;
+	opacity: 1;
+	display:none;
+	border: 2px green solid;
 }
 .grassleft{
 	position: absolute;
