--- a/part4.css
+++ b/part4.css
@@ -142,7 +142,15 @@
 
 }
 
-.gascard {
+#gascardPC {
+	width: 100%;
+	height: 100%;
+  	-webkit-transition: transform 2s;
+  	-webkit-transform-style: preserve-3d;
+  	cursor: pointer;
+	
+}
+#gascardMobile {
 	width: 100%;
 	height: 100%;
   	-webkit-transition: transform 2s;
