--- a/part4.css
+++ b/part4.css
@@ -100,6 +100,17 @@
 	font-weight: bold;
 	text-align: center;
 }
+.subtitle4 Mobile{
+	position: absolute;
+	z-index: 5;
+	width: 100%;
+	font-size: 8rem;
+	margin-left: 0%;
+	margin-top: 6%;
+	color: #c98c24;
+	font-weight: bold;
+	text-align: center;
+}
 .gas{
 	position: absolute;
 	border: 0px;
