--- a/part4.css
+++ b/part4.css
@@ -132,7 +132,27 @@
 	
 	
 }
-
+.gas-Mobile{
+	position: absolute;
+	border: 0px;
+	font-family: Gen Jyuu Gothic;
+	font-weight: bold;
+	z-index: 5;
+	font-size: 16rem;
+	background-color: transparent;
+	outline: none;
+	margin-left: 0%;
+	margin-top: 19%;
+	width: 100%;
+	height: 55.3%;
+	color: #acd3d2;
+	text-align: center;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	
+	
+}
 
 .textcardgas {
   	position: absolute;
