--- a/part4.css
+++ b/part4.css
@@ -170,7 +170,25 @@
 
 
 }
+.textcardgas-Mobile {
+  	position: absolute;
+	z-index: 6;
+	margin-top: 30%;
+	margin-left: 0%;
+	width: 77%;
+	height: 75%;
+	opacity: 1;
+  	perspective: 1000px;
+
+
+
+}
 .textcardgas:hover{
+	-webkit-filter:brightness(1.2);
+
+
+}
+.textcardgas-Mobile:hover{
 	-webkit-filter:brightness(1.2);
 
 
@@ -214,9 +232,24 @@
 
 }
 
+.gasfront-Mobile, .gasback-Mobile {
+	position: absolute;
+	display: flex;
+	font-size: 1.5rem;
+	color: #0B3140;
+	width: 100%;
+	height: 100%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	backface-visibility: hidden;
+  	background-color: rgba(172,211,210,0.95);
+	overflow: hidden;
+	
 
-.gasfront {
+
 }
+
 
 .gasfimg{
 	width: 100%;
