--- a/part4.css
+++ b/part4.css
@@ -290,6 +290,11 @@
 	text-align: center;
 	-webkit-text-size-adjust:none;
 }
+.gascontent-Mobile{
+	font-size: 1.33rem;
+	text-align: center;
+	-webkit-text-size-adjust:none;
+}
 
 
 
