--- a/part4.css
+++ b/part4.css
@@ -317,7 +317,36 @@
 	align-content: center;
 	justify-content: center;
 }
+.sun-Mobile{
+	position: absolute;
+	border: 0px;
+	font-family: Gen Jyuu Gothic;
+	font-weight: bold;
+	z-index: 5;
+	font-size: 9.66rem;
+	background-color: transparent;
+	outline: none;
+	margin-left: 25%;
+	margin-top: 19%;
+	width: 25%;
+	height: 55.3%;
+	color: #acd3d2;
+	text-align: center;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+}
 .textcardsun {
+  	position: absolute;
+	z-index: 6;
+	margin-top: 30%;
+	margin-left: 0%;
+	width: 77%;
+	height: 75%;
+	opacity: 1;
+  	perspective: 1000px;
+}
+.textcardsun-Mobile {
   	position: absolute;
 	z-index: 6;
 	margin-top: 30%;
@@ -331,16 +360,22 @@
 	-webkit-filter:brightness(1.2);
 }
 
-
-.suncard {
+.sunfront, .sunback {
+	position: absolute;
+	display: flex;
+	font-size: 1.67rem;
+	color: #0B3140;
 	width: 100%;
 	height: 100%;
-  	-webkit-transition: transform 2s;
-  	-webkit-transform-style: preserve-3d;
-  	cursor: pointer;
-}
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	backface-visibility: hidden;
+  	background-color: rgba(172,211,210,0.95);
+	overflow: hidden;
 
-.sunfront, .sunback {
+}
+.sunfront-Mobile, .sunback-Mobile {
 	position: absolute;
 	display: flex;
 	font-size: 1.67rem;
@@ -359,6 +394,9 @@
 .sunfront {
 	
 }
+.sunfront-Mobile {
+	
+}
 
 .sunfimg{
 	width: 100%;
@@ -367,14 +405,30 @@
 	justify-content: center;
 	align-items: center;
 }
-
+.sunfimg-Mobile{
+	width: 100%;
+	margin-top: 10%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 .sunback {
   	transform: rotateY(180deg);
 	-webkit-text-size-adjust:none;
 
 }
 
+.sunback-Mobile {
+  	transform: rotateY(180deg);
+	-webkit-text-size-adjust:none;
+
+}
 .suncontent{
+	font-size: 1.5rem;
+	-webkit-text-size-adjust:none;
+}
+
+.suncontent-Mobile{
 	font-size: 1.5rem;
 	-webkit-text-size-adjust:none;
 }
