--- a/part4.css
+++ b/part4.css
@@ -27,6 +27,18 @@
 	display: none;
 	
 }
+.view4-2Mobile{
+	position: absolute;
+	z-index: 5;
+	margin-top: 504%;
+	left: 0%;
+	width: 100vw;
+	padding-bottom: 112%;
+	background-color: transparent;
+	overflow: hidden;
+	opacity: 1;
+	display: none;
+}
 .bg4{
 	position: absolute;
 	z-index: -1;
@@ -51,6 +63,26 @@
 	position: absolute;
 	z-index: 1;
 	margin-top: 448%;
+	left: 0%;
+	width: 100%;
+	opacity: 1;
+	display:none;
+	border: 2px green solid;
+}
+.bg4-2-1Mobile{
+	position: absolute;
+	z-index: 1;
+	margin-top: 504%;
+	left: 0%;
+	width: 100%;
+	opacity: 1;
+	display:none;
+	border: 2px green solid;
+}
+.bg4-2-2Mobile{
+	position: absolute;
+	z-index: 1;
+	margin-top: 560%;
 	left: 0%;
 	width: 100%;
 	opacity: 1;
