--- a/part4.css
+++ b/part4.css
@@ -323,7 +323,7 @@
 	-webkit-text-size-adjust:none;
 }
 .gascontent-Mobile{
-	font-size: 1.33rem;
+	font-size: 6rem;
 	text-align: center;
 	-webkit-text-size-adjust:none;
 }
@@ -358,10 +358,10 @@
 	font-size: 9.66rem;
 	background-color: transparent;
 	outline: none;
-	margin-left: 25%;
-	margin-top: 19%;
-	width: 25%;
-	height: 55.3%;
+	margin-left: 0%;
+	margin-top: 15%;
+	width: 100%;
+	height: 70%;
 	color: #acd3d2;
 	text-align: center;
 	display: flex;
@@ -381,15 +381,27 @@
 .textcardsun-Mobile {
   	position: absolute;
 	z-index: 6;
-	margin-top: 30%;
+	margin-top: 20%;
 	margin-left: 0%;
-	width: 77%;
-	height: 75%;
+	width: 50%;
+	height: 80%;
 	opacity: 1;
   	perspective: 1000px;
 }
 .textcardsun:hover{
 	-webkit-filter:brightness(1.2);
+}
+#suncardPC {
+	
+	
+}
+#suncardMobile {
+	width: 100%;
+	height: 100%;
+  	-webkit-transition: transform 2s;
+  	-webkit-transform-style: preserve-3d;
+  	cursor: pointer;
+	
 }
 
 .sunfront, .sunback {
@@ -410,7 +422,7 @@
 .sunfront-Mobile, .sunback-Mobile {
 	position: absolute;
 	display: flex;
-	font-size: 1.67rem;
+	font-size: 6rem;
 	color: #0B3140;
 	width: 100%;
 	height: 100%;
