--- a/part4.css
+++ b/part4.css
@@ -368,6 +368,9 @@
 	align-content: center;
 	justify-content: center;
 }
+.sun-Mobile t{
+	font-size: 30rem;
+}
 .textcardsun {
   	position: absolute;
 	z-index: 6;
