--- a/part4.css
+++ b/part4.css
@@ -394,6 +394,9 @@
 .textcardsun:hover{
 	-webkit-filter:brightness(1.2);
 }
+.textcardsun-Mobile:hover{
+	-webkit-filter:brightness(1.2);
+}
 #suncardPC {
 	
 	
@@ -501,7 +504,36 @@
 	align-content: center;
 	justify-content: center;
 }
+.oil-Mobile{
+	position: absolute;
+	border: 0px;
+	font-family: Gen Jyuu Gothic;
+	font-weight: bold;
+	z-index: 5;
+	font-size: 9.66rem;
+	background-color: transparent;
+	outline: none;
+	margin-left: 0%;
+	margin-top: 15%;
+	width: 100%;
+	height: 70%;
+	color: #acd3d2;
+	text-align: center;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+}
 .textcardoil {
+  	position: absolute;
+	z-index: 6;
+	margin-top: 30%;
+	margin-left: 0%;
+	width: 77%;
+	height: 75%;
+	opacity: 1;
+  	perspective: 1000px;
+}
+.textcardoil-Mobile {
   	position: absolute;
 	z-index: 6;
 	margin-top: 30%;
@@ -514,14 +546,22 @@
 .textcardoil:hover{
 	-webkit-filter:brightness(1.2);
 }
-.oilcard {
+.textcardoil-Mobile:hover{
+	-webkit-filter:brightness(1.2);
+}
+
+#oilcardPC {
+	
+	
+}
+#oilcardMobile {
 	width: 100%;
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
   	cursor: pointer;
+	
 }
-
 .oilfront, .oilback {
 	position: absolute;
 	display: flex;
@@ -537,11 +577,37 @@
 	overflow: hidden;
 
 }
+.oilfront-Mobile, .oilback-Mobile {
+	position: absolute;
+	display: flex;
+	font-size: 6rem;
+	color: #0B3140;
+	width: 100%;
+	height: 100%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	backface-visibility: hidden;
+  	background-color: rgba(172,211,210,0.95);
+	overflow: hidden;
+
+}
 
 .oilfront {
 }
 
+.oilfront-Mobile {
+}
+
 .oilfimg{
+	width: 100%;
+	margin-top: 20%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+.oilfimg-Mobile{
 	width: 100%;
 	margin-top: 20%;
 	display: flex;
@@ -559,12 +625,27 @@
 
 }
 
+.oilback-Mobile {
+  	transform: rotateY(180deg);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	-webkit-text-size-adjust:none;
+
+}
 
 .oilcontent{
 	font-size: 1.33rem;
 	line-height: 1;
 	-webkit-text-size-adjust:none;
 }
+
+.oilcontent-Mobile{
+	font-size: 1.33rem;
+	line-height: 1;
+	-webkit-text-size-adjust:none;
+}
+
 
 .life{
 	position: absolute;
