--- a/part4.css
+++ b/part4.css
@@ -811,7 +811,12 @@
 	.bg4-2-2Mobile{
 		display: block;
 	}
-	
+	.bg4-3-1Mobile{
+		display: block;
+	}
+	.bg4-3-2Mobile{
+		display: block;
+	}
 }
 
 @media (min-device-width: 100px) and (max-device-width: 375px){
@@ -825,6 +830,9 @@
 	.view4-2Mobile{
 		display: block;
 	}
+	.view4-3Mobile{
+		display: block;
+	}
 	.bg4-1-1Mobile{
 		display: block;
 	}
@@ -835,6 +843,12 @@
 		display: block;
 	}
 	.bg4-2-2Mobile{
+		display: block;
+	}
+	.bg4-3-1Mobile{
+		display: block;
+	}
+	.bg4-3-2Mobile{
 		display: block;
 	}
 }
