--- a/part4.css
+++ b/part4.css
@@ -51,6 +51,18 @@
 	opacity: 1;
 	display: none;
 }
+.view4-4Mobile{
+	position: absolute;
+	z-index: 5;
+	margin-top: 728%;
+	left: 0%;
+	width: 100vw;
+	padding-bottom: 112%;
+	background-color: transparent;
+	overflow: hidden;
+	opacity: 1;
+	display: none;
+}
 .bg4{
 	position: absolute;
 	z-index: -1;
@@ -115,6 +127,26 @@
 	position: absolute;
 	z-index: 1;
 	margin-top: 672%;
+	left: 0%;
+	width: 100%;
+	opacity: 1;
+	display:none;
+	border: 2px green solid;
+}
+.bg4-4-1Mobile{
+	position: absolute;
+	z-index: 1;
+	margin-top: 728%;
+	left: 0%;
+	width: 100%;
+	opacity: 1;
+	display:none;
+	border: 2px green solid;
+}
+.bg4-4-2Mobile{
+	position: absolute;
+	z-index: 1;
+	margin-top: 784%;
 	left: 0%;
 	width: 100%;
 	opacity: 1;
