--- a/part4.css
+++ b/part4.css
@@ -733,6 +733,28 @@
 	align-content: center;
 	justify-content: center;
 }
+.life-Mobile{
+	position: absolute;
+	border: 0px;
+	font-family: Gen Jyuu Gothic;
+	font-weight: bold;
+	z-index: 5;
+	font-size: 9.66rem;
+	background-color: transparent;
+	outline: none;
+	margin-left: 0%;
+	margin-top: 15%;
+	width: 100%;
+	height: 70%;
+	color: #acd3d2;
+	text-align: center;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+}
+.life-Mobile t{
+	font-size: 30rem;
+}
 .textcardlife {
   	position: absolute;
 	z-index: 6;
@@ -743,21 +765,52 @@
 	opacity: 1;
   	perspective: 1000px;
 }
+.textcardlife-Mobile {
+  	position: absolute;
+	z-index: 6;
+	margin-top: 20%;
+	margin-left: 0%;
+	width: 50%;
+	height: 80%;
+	opacity: 1;
+  	perspective: 1000px;
+}
 .textcardlife:hover{
 	-webkit-filter:brightness(1.2);
 }
-.lifecard {
+.textcardlife-Mobile:hover{
+	-webkit-filter:brightness(1.2);
+}
+
+#lifecardPC{
+	
+}
+#lifecardMobile{
 	width: 100%;
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
   	cursor: pointer;
 }
-
 .lifefront, .lifeback {
 	position: absolute;
 	display: flex;
 	font-size: 1.33rem;
+	color: #0B3140;
+	width: 100%;
+	height: 100%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	backface-visibility: hidden;
+  	background-color: rgba(172,211,210,0.95);
+	overflow: hidden;
+
+}
+.lifefront-Mobile, .lifeback-Mobile {
+	position: absolute;
+	display: flex;
+	font-size: 6rem;
 	color: #0B3140;
 	width: 100%;
 	height: 100%;
@@ -774,7 +827,19 @@
 	
 
 }
+.lifefront-Mobile {
+	
+
+}
 .lifefimg{
+	width: 85%;
+	margin-top: 15%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+.lifefimg-Mobile{
 	width: 85%;
 	margin-top: 15%;
 	display: flex;
@@ -792,11 +857,26 @@
 
 
 }
+.lifeback-Mobile {
+	transform: rotateY(180deg);
+	align-items: center;
+	text-align: center;
+	line-height: 1.5;
+	-webkit-text-size-adjust:none;
+
+
+}
 
 
 .lifecontent{
 	font-size: 1.5rem;
 	line-height: 0;
+	-webkit-text-size-adjust:none;
+}
+
+.lifecontent-Mobile{
+	font-size: 6rem;
+	text-align: center;
 	-webkit-text-size-adjust:none;
 }
 
