--- a/part4.css
+++ b/part4.css
@@ -965,6 +965,8 @@
 	}
 	.view4-4Mobile{
 		display: block;
+		overflow-x: hidden;
+
 	}
 	.bg4-1-1Mobile{
 		display: block;
@@ -1008,6 +1010,8 @@
 	}
 	.view4-4Mobile{
 		display: block;
+		overflow-x: hidden;
+
 	}
 	.bg4-1-1Mobile{
 		display: block;
