--- a/part2.css
+++ b/part2.css
@@ -301,7 +301,7 @@
 	outline: none;
 	font-family: Gen Jyuu Gothic;
 	z-index: 2;
-	font-size: 16rem;
+	font-size: 18rem;
 	width: 30.83%;
 	height: 27.78%;
 	margin-top: 5.11%;
@@ -337,7 +337,7 @@
 	background-color: transparent;
 	opacity: 1;
 	line-height: 1;
-	font-weight: normal;
+	font-weight: 200;
 	-webkit-text-size-adjust: none;
 
 }
@@ -532,7 +532,7 @@
 	outline: none;
 	font-family: Gen Jyuu Gothic;
 	z-index: 2;
-	font-size: 20rem;
+	font-size: 22rem;
 	width: 30.83%;
 	height: 27.78%;
 	margin-top: 5.11%;
