--- a/part2.css
+++ b/part2.css
@@ -308,6 +308,12 @@
 	margin-left: 4.17%;
 	font-weight: bold;
 }
+
+.Chemicalpro-Mobile h3{
+	
+	font-size: 20rem;
+	
+}
 .Chemicalproinfor{
 	position: absolute;
 	z-index: 2;
