--- a/part5.css
+++ b/part5.css
@@ -103,11 +103,70 @@
 	opacity: 1;
 }
 	
-
+.references{
+	position: absolute;
+	z-index: 1;
+	font-size: 8rem;
+	margin-top: 8%;
+	margin-left: 0%;
+	width: 100%;
+	text-align: center;
+	letter-spacing: 0px;
+	color: #FFFFFF;
+	text-shadow: 2px 3px 6px #FFFFFF22;
+	opacity: 1;
+}
 .CO2role{
 	position: absolute;
 	margin-top: 5%;
 	font-size: 2.33rem;
+	margin-left: 60%;
+	width: 30%;
+	height: 5%;
+	text-align: left;
+	letter-spacing: 0px;
+	color: #ACD3D2;
+	opacity: 1;
+	
+}
+.CO2pro-Mobile{
+	position: absolute;
+	margin-top: 5%;
+	font-size: 4.33rem;
+	margin-left: 12%;
+	width: 16%;
+	height: 5%;
+	text-align: left;
+	letter-spacing: 0px;
+	color: #ACD3D2;
+	opacity: 1;
+}
+.inforfrom-Mobile{
+	position: absolute;
+	z-index: 5;
+	font-size: 2.66rem;
+	magin-top: 25%;
+	margin-left: 2%;
+	text-align: left;
+}
+.CO2cause-Mobile{
+	position: absolute;
+	margin-top: 20%;
+	font-size: 4.33rem;
+	margin-left: 12%;
+	width: 16%;
+	height: 5%;
+	text-align: left;
+	letter-spacing: 0px;
+	color: #ACD3D2;
+	opacity: 1;
+}
+	
+
+.CO2role-Mobile{
+	position: absolute;
+	margin-top: 5%;
+	font-size: 4.33rem;
 	margin-left: 60%;
 	width: 30%;
 	height: 5%;
