--- a/HomePage.css
+++ b/HomePage.css
@@ -581,7 +581,17 @@ h3,p{
 	.allpg{
 		padding-bottom: 896%;
 	}
-	
+	.myBtn {
+  	
+  	
+		margin-top: 4%; /* Place the button at the bottom of the page */
+		margin-left: 87.5%; /* Place the button 30px from the right */
+		width: 8%;
+		padding-bottom: 8%;
+		border-radius: 50%;
+  	
+	}
+
 }
 
 @media (min-device-width: 100px) and (max-device-width: 375px){
@@ -595,5 +605,14 @@ h3,p{
 	.allpg{
 		padding-bottom: 896%;
 	}
-	
+	.myBtn {
+  	
+  	
+		margin-top: 4%; /* Place the button at the bottom of the page */
+		margin-left: 87.5%; /* Place the button 30px from the right */
+		width: 8%;
+		padding-bottom: 8%;
+		border-radius: 50%;
+  	
+	}
 }
